gitops/memos/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: memos
  namespace: memos
  labels:
    app: memos
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: memos
  template:
    metadata:
      labels:
        app: memos
    spec:
      enableServiceLinks: false
      containers:
        - name: memos
          image: neosmemo/memos:0.30.0
          ports:
            - name: http
              containerPort: 5230
          volumeMounts:
            - name: data
              mountPath: /var/opt/memos
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: memos-data
