gitops/memos/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: memos
  namespace: memos
spec:
  selector:
    app: memos
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
