gitops/memos/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: memos
  namespace: memos
spec:
  parentRefs:
    - name: traefik
      namespace: traefik
  hostnames:
    - journal.sanderpeters.cloud
  rules:
    - backendRefs:
        - name: memos
          port: 80
